--- a/metadata.yaml
+++ b/metadata.yaml
@@ -58,6 +58,7 @@ subjects:
 - !lcc 'QH'
 - !lcsh 'Evolution (Biology)'
 - !lcsh 'Crustacea'
+- GITenberg
 title: Facts and Arguments for Darwin
 url: http://www.gutenberg.org/ebooks/6475
 wikipedia:
